# subhue-reports

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  OPENCODE.md  README.md  already_dev.md  justfile  pyproject.toml  requirements.txt
.agents/skills/gerar-documento/: SKILL.md
.claude/: stable-restrictions.md
.opencode/skills/gerar-documento/: SKILL.md
data/manifest/: manifest.meta.json
docs/agents/: README.md
reference/airflow/: dbt_publish_manifest.py
reference/utils/: db_query.py  gerador_documentacao_subhue.py  gerador_relatorio_subhue.py  report_metadata.py  sync_dados_documentacoes.py
src/subhue_reports/cache/: connection.py  extractor.py  query.py  resolver.py
src/subhue_reports/registry/: catalog.py  checker.py  loader.py  updater.py
src/subhue_reports/renderer/: __init__.py  __main__.py  _html.py  _meta.py  _output.py  _plotly.py  dashboard.py  documentacao.py  relatorio.py  sections.py
src/subhue_reports/skills/: prompts.py  tools.py
tests/: conftest.py
tests/fixtures/: exemplo_dashboard.json  exemplo_documentacao.json  exemplo_relatorio.json  expected_report.html  sample_config.yaml  sample_data.csv
tests/integration/: test_cache_integration.py  test_db_query.py  test_report_generation.py
tests/unit/: test_cache.py  test_catalog.py  test_config.py  test_render_html.py  test_renderer.py  test_transform.py
